# spoor

./: .env.example  .gitignore  AGENT.md  APP.md  LICENSE  README.md  SKILL.md  SUBMISSION_ZH.md  git-log.txt  index.html  metadata.json  netlify.toml  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: release-desktop.yml
docs/: AI-PROMPTS.md  BUILTIN_DOUBAO.md  BUILTIN_MIMO.md  DATA_RECOVERY.md  DESKTOP_INSTALL.md  LOCAL_LLM.md  MINIMAX_SPOOR_EN_SYNC.md  PROMO_SPATIAL_NOTES.md  PROMO_SPOOR.md  RELEASE_v0.1.0.md  RENAME_GITHUB_REPO.md  SPOOR_PROMO_MUSIC_PROMPTS.md  SPOOR_PROMO_ZH_SUBTITLES.md
remotion-kit/: .gitignore  README.md  package-lock.json  package.json  remotion.config.mjs
remotion-kit/examples/: client-sse-snippet.js  express-mount.mjs
remotion-kit/remotion/: Composition.jsx  PromoVertical.jsx  Root.jsx  SpatialNotesAppDemo.jsx  SpatialNotesPromo.jsx  SpoorPromo.jsx  spatial-notes-promo.json  spoor-promo-copy.js  spoor-promo-zh.json  spoor-promo.json
remotion-kit/routes/: remotion.mjs
remotion-kit/test/: remotion-api.test.mjs  remotion-components.test.mjs  test-app.mjs
scripts/: cargo-tauri-dev-build.cmd  copy-binaries.ps1  download-llama-cuda.ps1  patch-llama-sys-build.ps1  publish-desktop-release.ps1  regenerate-app-icons.ps1  remotion-server.mjs  restore-tauri-data-from-spatialnodes.ps1  setup-builtin-doubao.mjs  setup-builtin-mimo.mjs  setup-builtin-mimo.ps1  sync-llama-cpp-sys-vendor.cmd  tauri-build-release.cmd  test-doubao-api.mjs  upload-release-manual.md
src/: App.tsx  db.ts  i18n.ts  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  local_llama.rs  main.rs
src/components/: AISettingsDocsPanel.tsx  AISettingsModal.tsx  AgentIcon.tsx  AgentsStudio.tsx  AppDialogProvider.tsx  CanvasHistoryPopover.tsx  CanvasToolbar.tsx  IntentClarificationModal.tsx  Reference.tsx  ResearchLab.tsx  Sidebar.tsx
src/config/: persistence.ts
src/constants/: aiProviderDocs.ts  deepseek.ts  defaultAgents.ts  desktopRelease.ts  doubao.ts  mimo.ts  nodeCapabilities.ts  noteLayouts.ts  presets.ts
src/dev/: resetBuiltinAgents.ts
src/hooks/: useAiActions.ts  useCanvasInteraction.ts  useDraggable.ts  useFullscreen.ts  (+4 more)
tests/: App.test.tsx  db.test.ts  i18n.test.ts  main.test.ts  setup.ts  testUtils.tsx  testing-library.tsx
(+97 files in other folders)
