[package]
name = "spatial-notes"
version = "0.1.0"
description = "A local-first spatial note taking app"
authors = ["AI Studio"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# llama-cpp-2 构建依赖 CMake、C++ 工具链；bindgen 需要 LLVM 的 libclang（Windows 可安装 LLVM 并设置 LIBCLANG_PATH）
llama-cpp-2 = "0.1.146"
encoding_rs = "0.8"
tokio = { version = "1", features = ["rt-multi-thread"] }

[lib]
name = "spatial_notes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "spatial-notes"
path = "src/main.rs"

# MSVC: upstream build.rs omitted crate root on the include path; wrapper_oai.cpp needs it for `llama.cpp/...` includes.
[patch.crates-io]
llama-cpp-sys-2 = { path = "third_party/llama-cpp-sys-2" }
