[package]
name = "spatial-notes"
version = "0.1.0"
description = "A local-first spatial note taking app"
authors = ["AI Studio"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
open = "5"
# 本地推理改为子进程调用预编译 llama-cli.exe，无需从源码编译 CUDA llama.cpp
encoding_rs = "0.8"
tokio = { version = "1", features = ["rt-multi-thread"] }

[lib]
name = "spatial_notes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "spatial-notes"
path = "src/main.rs"

